--- a/spending.html
+++ b/spending.html
@@ -5,6 +5,50 @@
 		<META charset="UTF-8">
 		<META name="viewport" content="width=device-width, initial-scale=1.0">
 		<TITLE>N.Murugesan GDP</TITLE>
+<script type="module">
+  // Import the Firebase SDK
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getDatabase, ref, set, push, get, child } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+
+  // Your Firebase configuration (from Firebase Console)
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+    databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_PROJECT_ID.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  // Example: save data from a form
+  function saveData() {
+    const name = document.getElementById("username").value;
+    const amount = document.getElementById("amount").value;
+
+    const newRef = push(ref(db, "spendings"));
+    set(newRef, {
+      name: name,
+      amount: amount,
+      date: new Date().toISOString()
+    });
+
+    alert("Saved!");
+  }
+
+  // Example: retrieve data
+  async function loadData() {
+    const snapshot = await get(child(ref(db), "spendings"));
+    if (snapshot.exists()) {
+      console.log(snapshot.val());
+    } else {
+      console.log("No data found");
+    }
+  }
+</script>
 	</HEAD>
 	<BODY TOPMARGIN='0' LEFTMARGIN='0' MARGINHEIGHT='0' MARGINWIDTH='0'>
 <form id="spending-form" name="spending-form" netlify>
@@ -12,6 +56,10 @@
   <label>Amount: <input type="number" id="amount" name="amount" required></label><br>
   <label>Date: <input type="date" id="date" name="date" required></label><br>
   <button type="submit">Save</button>
+<input type="text" id="username" placeholder="Enter name" />
+<input type="number" id="amount" placeholder="Enter amount" />
+<button onclick="saveData()">Save</button>
+<button onclick="loadData()">Load</button>
 </form>
 <NOSCRIPT>
 		<TABLE border='1' style='width:100%;'>
@@ -2172,7 +2220,22 @@ rankings</A> </TD> <TD valign='top' align='left'>       <A HREF='.\MyProfileView
 				const year = date.getFullYear();
 				return `${weekday} ${day}-${month}-${year}`;
 			}
-			const spendingData = {
+
+	import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+	import { getDatabase, ref, set, push, get, child } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+	const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "donotwastemoney.firebaseapp.com",
+    databaseURL: "https://donotwastemoney-default-rtdb.firebaseio.com",
+    projectId: "donotwastemoney",
+    storageBucket: "donotwastemoney.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  const spendingData = {
 Nov: [
 
 [ formatDate("03-Nov-2025"),        "Snacks",  30.00,       "Petrol", 210.00,         "",   0.00,                "",   0.00,           "",      0.00,            "",  0.00,        "",   0.00 ],
@@ -2231,6 +2294,34 @@ Sep: [
 [ formatDate("13-Sep-2025"),      "BESCOM", 256.00,          "",    .00,           "",     "",            "",       "",           "",     "",           "",       "",          "",    "" ]
 ]
 			};
+	async function saveToDB()
+	{
+		const listRef = ref(db, "spendingData");
+		await set(listRef, spendingData);
+		alert("Data saved to Firebase!");
+	}
+async function loadFromDB() {
+    const snapshot = await get(child(ref(db), "spendingData"));
+    if (snapshot.exists()) {
+      const data = snapshot.val();
+      const rows = data.Nov;
+      let html = "<table border='1' style='width:100%;border-collapse:collapse'><tr><th>Date</th><th>Item</th><th>Amount</th></tr>";
+
+      rows.forEach(row => {
+        const date = row[0];
+        for (let i = 1; i < row.length; i += 2) {
+          if (row[i] && row[i + 1] > 0) {
+            html += `<tr><td>${date}</td><td>${row[i]}</td><td>${row[i + 1]}</td></tr>`;
+          }
+        }
+      });
+
+      html += "</table>";
+      document.getElementById("dbTable").innerHTML = html;
+    } else {
+      alert("No data found in Firebase!");
+    }
+  }
 			if( 'undefined' == typeof year)
 			{
 				year=new Date().getFullYear();
@@ -2484,5 +2575,8 @@ solutions &copy; 1985 to 900000000/0(infinite). All rights reserved. <A href="pr
 	</TR>
  					</TBODY>
 </TABLE>
+<button onclick="saveToDB()">Save to Firebase</button>
+<button onclick="loadFromDB()">Load from Firebase</button>
+<div id="dbTable"></div>
 </BODY>
 </HTML>
