--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<META name="viewport" content="width=device-width, initial-scale=1.0">
 		<TITLE>Natural, artificial, unified, secured, financial and group acess management SSL</TITLE>
 	</HEAD>
+	<SCRIPT TYPE="text/javascript" src="NMmenu050.js">
+	</SCRIPT>
 	<BODY TOPMARGIN='0' LEFTMARGIN='0' MARGINHEIGHT='0' MARGINWIDTH='0'>
 	<!--
 	#{
@@ -455,8 +457,6 @@ HOME </TD>
 	<!--
 	#}
 	-->
-<SCRIPT TYPE="text/javascript" src="./NMmenu050.js">
-		</SCRIPT>
 		<TABLE border='1'>
 			<TR>
 				<TD valign='top' align='left'>
