--- a/spending.html
+++ b/spending.html
@@ -1,463 +1,21 @@
 <!DOCTYPE html>
-<HTML lang="en">
-	<HEAD>
-		<META charset="UTF-8">
-		<LINK href="MyMenu002.css" rel="stylesheet">
-		<META name="viewport" content="width=device-width, initial-scale=1.0">
-		<TITLE>Prevent wasting money</TITLE>
-	</HEAD>
-	<SCRIPT TYPE="text/javascript" src="NMmenu050.js">
-	</SCRIPT>
-	<BODY TOPMARGIN='0' LEFTMARGIN='0' MARGINHEIGHT='0' MARGINWIDTH='0'>
-	<!--
-	#{
-	-->
-<NOSCRIPT>
-<TABLE border='1'>
-<TR> <TD valign='top' align='right' bgcolor=cyan>
-HOME </TD>
-<TD valign='top' align='right'>
-	<A>MoneyHelp01</A>
-</TD>
-<TD valign='top' align='right'>
-	<A>MoneyHelp02</A>
-</TD>
-<TD valign='top' align='right'>
-	<A>MoneyHelp03</A>
-</TD>
-<TD valign='top' align='right'>
-	<A>MoneyHelp04</A>
-</TD>
-<TD valign='top' align='right'>
-	<A>MoneyHelp05</A>
-</TD>
-<TD valign='top' align='right'>
-	<A>Garbages</A>
-</TD>
-<TD valign='top' align='right'>
-	UpdateAadhar
-</TD>
-<TD valign='top' align='right'>
-	WindowsHelp
-</TD>
-<TD valign='top' align='right'>
-	<A>Myself</A>
-</TD>
-<TD valign='top' align='right' bgcolor='cyan'>
-	<A>Privacy</A>
-</TD>
-</TR>
-<TR> <TD valign='top' align='right'>
-	<A HREF='NMurugesan_cv.html'>NMurugesan_cv</A>
-</TD> <TD valign='top' align='right'>
-			<A HREF='mis-interest.html' title='வல்லரசுபங்களிப்பு01'>வல்லரசுபங்களிப்பு</A>
-</TD>
-<TD valign='top' align='right'>
-	<A HREF='BEST_BANK_TO_OPEN_FD.html'>BankForFd</A>
-</TD>
-	<TD valign='top' align='right'>
-		<A HREF='MIS_INTEREST_EARLIER_INTERNET_BANKING_ERROR.html'>PostNetLeapErr</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SANI_MUTHU_CALENDAR.html'>SaniMuthuCalendar</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='I_FEEL_RENT_BETTER_THAN_LEASE.html'>Rent &gt; Lease</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='SBI_employee_never_help.html'>SbiEmpNeverHelp</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='block_url_msedge.html'>BlockUrlMsedge</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='find_Number_Of_system_connected_to_bsnl.html'>BSNLUsrCnt</A></TD>
-	<TD valign='top' align='right'><A HREF='Prediction.html'>MyPrediciton</A></TD>
-	<TD valign='top' align='right'>
-		<A HREF='KnowledgeTransferAmount.html' title='Knowledge transfer amount'>KDA</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-			<A HREF='openssl_speed.html'>openssl speed</A> </TD>
-	<TD valign='top' align='right'>
-		<A HREF='nsc_interest.html' title='வல்லரசுபங்களிப்பு02'>வல்லரசுபங்களிப்பு</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Post_office_PPF_deposit.html'>PostPpfDeposit</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='DoNotWasteMoney.html'>NoMoneyWastage</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='UselessGasTaxAgencies.html'>Gas tax agency</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='PreventMoney_Wastage.html'>PreventMoneyWaste</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='AppolloPharmacy.html'>Apollo</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='GarbageNumbers.html'>GarbageNumbers</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='Windows_ERR_HELP.html'>WindowsHelp</A></TD>
-	<TD valign='top' align='right'><A HREF='My_dream_at_universe.html'>MyUniverseDream</A></TD>
-	<TD valign='top' align='right'><A HREF='Time-travel-knowledge-transfer.html'>TimeTravel</A></TD>
-</TR>
-<TR>
-	<TD rowspan='14' valign='top' align='right'>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='ppf.html' title='வல்லரசுபங்களிப்பு03'>வல்லரசுபங்களிப்பு</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='LEARN_SBI_FD.html'>Learn SBI ETDR</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='CurrentBillPayment.html'>ElectricBillPayment</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='LPG_No_tips_delivery.html'>LPG no tips</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='IPPB_Transfer_money.html'>IppbMoneyTransfer</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='GarbageEmail.html'>GarbageEmail</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HackUrlEmailNumSms.html'>HackUrlSms</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='thunderbird_at_Windows.html'>thunderbird</A></TD>
-	<TD valign='top' align='right'><A HREF='spending.html'>NoMoneyWastage</A></TD>
-	<TD valign='top' align='right'><A HREF='Gold-seller-comparison.html'>GoldSeller</A></TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-			<A HREF='shared-market-mis-compare.html'>SharedMktMis</A>
-	</TD>
-	<TD valign='top' align='right'>
-			<A HREF='how-open-sbi-etdr.html'>Steps@SbiFD</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Steps_to_Close_NPS_After_5_Years.html'>NeverOpenNps</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='airtel_recharge.html'>MobChargeErr</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='BIDARAGUPPA-GARBAGE-DUMPING.html'>GarbageAttendance</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Samsung_Light_Mode.html'>SamsungLightMode</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='LoanLicSchoolActions.html'>LoanLicSchool</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='Import_Eml_File_To_Thunderbird.html'>ImportEmail</A></TD>
-	<TD valign='top' align='right'><A HREF='murugesan_openssl.html'>My ranking</A></TD>
-	<TD valign='top' align='right'><A HREF='INDIAN_PM.html'>INDIAN_PM</A></TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'> <A HREF='MIS_ONLINE_EXCEPTION.html'>MisOnlineException</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SBI_ETDR_INTEREST.html'>SBI ETDR</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HomeChecklist.html'>HomeCheckList</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='PostOfficeHolidays.html'>PostOfficeHolidays</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A title='https://results.cbse.nic.in user to get HSC results from Tamilnadu.'>results.cbse.nic.in</A>
-	<TD valign='top' align='right'>
-		<A href='Friendship_day.html'>FriendshipDay</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='UPDATE_AADHAR_WAIT_DAYS.html'>UpdateAadhar</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='ThunderBird_All_Mail_Count.html'>EMAIL Count</A></TD>
-	<TD valign='top' align='right'><A HREF='My_Drawings.html'>My drawing</A></TD>
-	<TD valign='top' align='right'><A HREF='TAMILNADU_CM.html'>TamilnaduCM</A></TD>
-</TR>
-<TR> <TD valign='top' align='right'> 		<A HREF='THIRUMOOLAR-MIS-EXAMPLE.html'>ThirumoolarMis</A>
-</TD>
-	<TD valign='top' align='right'>
-			<A HREF='TMB_ETDR_INTEREST.html'>TMB ETDR</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='PETROL_AIR_PUMP.html'>PetrolAirPump</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='FixedDepositComparisonBanks.html'>FD at each bank</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SMS_Hackers.html'>SMS hackers</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='Benefits_of_plants.html'>BenefitsOfPlants</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='TNEB_ADD_AADHAAR_ONLINE.html'>TNEBAddAadhar</A>
-	</TD>
-	<TD valign='top' align='right'><A href='Change_Default_SearchEngine.html'>DefaultEngine</A></TD>
-	<TD valign='top' align='right'><A href='murugesan_openssl_search.html'>murugesan ssl</A></TD>
-	<TD valign='top' align='right'><A href='KARNATAKA_CM.html'>Karnataka CM</A></TD>
-</TR>
-<TR> <TD valign='top' align='right'> <A HREF='do_not_waste_money.html'>Save money</A>
-</TD>
-	<TD valign='top' align='right'>
-			<A HREF='IND_ETDR_INTEREST.html'>IND ETDR</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='BuyerAction.html'>BuyerActions</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Indane-gas-ippb.html'>IPPG gas payment</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='block_geocities.html'>Block geocities</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='firefox_Comedy.html'>FirefoxComedy</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='UPDATE_AADHAR_WAIT_DAYS.html'>AadharChgWaitDays</A>
-	</TD>
-	<TD valign='top' align='right'><A HREF='IDA14092023000.html'>WorstPatch</A></TD>
-	<TD valign='top' align='right'><A HREF='poems/index.html'>My tamil poems</A></TD>
-	<TD valign='top' align='right'><A HREF='earth_politics_or_general_age.html'>PoliticsAge</A></TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='AIBEX_mobile_cover_seller_amazon.html'>AIBEX mobile cover</A>
-	</TD>
-	<TD valign='top' align='right'>
-			<A HREF='BNK_CREDIT_INTEREST.html'>Bank credit</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='2WHEELER_INSURANCE.html'>2WheelerLIC</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Pay_Book_Bharat_gas_online.html'>BuyCylinder-NoTips</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='BlockWebSite.html'>Block website</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='JokesReduceTension.html'>ReduceTension</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='DOWNLOAD_PAN_AADHAR.html'>DownloadPanAadhar</A>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'>
-		<A HREF='I_love_mathematics.html'>I <span style="color: red;">&#9829;</span> Mathematics</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Politician_assets.html'>PoliticianAssets</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='HowToEarnMoney.html'>Earn money</A>
-	</TD>
-	<TD valign='top' align='right'>
-			<A HREF='Donate.html'>Before donations</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SbiRewards.html'>SbiRewards</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SoapProductCountry.html'>SoapCompany</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='NEWS_emails.html'>NEWS emails</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Roaming_144_Comedy.html'>RoamingComedy</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='aadhaar-unlock-bio-metrics.html'>AadharBioMetrics</A>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'>
-		<A HREF='TamilLetters.html'>Tamil letters</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='NewsPolitics.html'>NEWSpolitics</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='DNC_Chit_fund.html'>Chit fund</A>
-	</TD>
-	<TD valign='top' align='right'>
-			<A HREF='mydonation.html'>My donation</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HDFC_AMB_Hacker.html'>HdfcAmbHacker</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='rajaji_nagar_ho.html'>RajajiNagarPost</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='ISRO_emails.html'>ISRO emails</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='fiverr_Comedy.html'>FiverrComedy</A>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'>
-		<A HREF='kannada_letters.html'>Kannada letters</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='SBI_ATM_CARD_SERVICE_CHARGES.html'>SBI ATM charges</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='No_IMPS_ippb_to_Bank.html'>NoImps at Ippb</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HandleBankAMB.html'>HandleBankAMB</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='SaveMoney.html'>Save money</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='NPS_emails.html'>NPS emails</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HappyEngineersDay.html'>HappyEngineersDay</A>
-	</TD>
-	<TD valign='top' align='right'>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='left' colspan='2'>
-		<A HREF='Gregorian_calendar.html'>Gregorian calendar</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='bsnl_airtel_jio.html'>BSNL vs private</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='NEVER_USE_GPAY_MOBILE_RECHARGE.html' title='DO NOT PERFORM MOBILE RECHARGE USING PHONE PAY OR PAYTM OR GPAY OR MOBILE APP' >NMGpay</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='TVS_MONEY_WASTAGE.html'>TvsMoneyWastage</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='China_Tv_mobile_router.html'>China mobile router</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='uninstall_mob_apps.html'>UninstallMobApps</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='HappyBirthDay.html'>HappyBirthday</A>
-	</TD>
-	<TD valign='top' align='right'>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'>
-		<A HREF='exercise_at_home.html'>Exercise@Home</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='SBIAtmUsage.html'>SBI ATM error</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='Tamilnadu_CurrentBill.html'>TN TNEB</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='COMPARE_ATM_MOB_PAY.html'>ATMGpayCompare</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='ippb.html'>India post app</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='ITR_Refund_reissue.html'>ITR refund issue</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='WeLikeGod.html'>WeLikeGod</A>
-	</TD>
-	<TD valign='top' align='right'>
-	</TD>
-	<TD valign='top' align='right'></TD>
-	<TD valign='top' align='right'>
-		<A HREF='thirukkural_001_kadavuL_vaazhthu.html'>Thirukkural</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='closing-nsc-online.html'>Closing NSC online</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='Karnataka_CurrentBill.html'>KA BESCOM</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='MOBILE_postpaid_payment.html'>MobPostpaidPay</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Traffic_violation.html'>TrafficViolation</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='ITR_Refund_NOT_RECEIVED.html'>ITRRefundWaiting</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='tamilnadu_public_holidays.html'>TNSchoolHolidays</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='term_deposit.html'>Term deposit</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A href='FindIndianRupee-Duplicate.html'>Duplicate INR</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='nsc_open.html'>OpenNscOnline</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Traffic_Violation_payment.html'>Pay@TrafficViolation</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Petrol_Usage_Milage.html'>PetrolUsage</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='Karnataka_school_holidays.html'>KASchoolHolidays</A>
-	</TD>
-</TR>
-<TR>
-	<TD valign='top' align='right'>
-		<A href='STEPS_OPENING_POSTOFFICE_ACCOUNT.html'>PostActOpensteps</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='PostOfficeJointBalance.html'>Bal@PostOffice</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='mobile_charge_alarm.html'>MobChargeAlarm</A>
-	</TD>
-	<TD valign='top' align='right'>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='PostOfficeJointBalance.html'>NetBankTimedOut</A>
-	</TD>
-	<TD valign='top' align='right'>
-		<A HREF='StepsToUnlockSim.html'>UnlockSimSteps</A>
-	</TD>
-</TR>
-</TABLE>
-</NOSCRIPT>
-	<!--
-	#}
-	-->
-<h1>Prevent wasting money</h1>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Spending Tracker - Firebase</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 18px; }
+  h1 { margin-bottom: 6px; }
+  .controls { margin: 8px 0; }
+  input, select, button { margin-right: 6px; padding: 6px 8px; }
+  table { width:100%; border-collapse:collapse; margin-top:12px; }
+  th, td { border:1px solid #ccc; padding:6px; text-align:left; }
+  th { background:#f3f3f3; }
+</style>
+</head>
+<body>
+<h1>Spending Tracker (Firebase)</h1>
 <p>Default view shows <strong>Nov-2025</strong> if available. Use Add Entry to add data.</p>
 <div class="controls">
   <label for="monthSelect">View:</label>
