Added menu bar to spending.html and spending-forward-fixed.html

--- a/spending-updated.html
+++ b/spending-updated.html
@@ -28,7 +28,7 @@
 
   // 🔧 Your Firebase configuration
   const firebaseConfig = {
-    apiKey: "apiKey",
+    apiKey: "AIzaSyDSNanmji7WVBtQHlPO-J_E5RQu9Qlq4Qw",
     authDomain: "openmurugesan.firebaseapp.com",
     projectId: "openmurugesan",
     storageBucket: "openmurugesan.firebasestorage.app",
@@ -46,6 +46,7 @@
   function formatDate(d) { return d; }
   const spendingData = {
     Nov: [
+      [ formatDate("04-Nov-2025"), "Dinner",440.00,       "",   0.00 ],
       [ formatDate("03-Nov-2025"), "Snacks", 30.00, "Petrol", 210.00 ],
       [ formatDate("02-Nov-2025"), "Rice", 700.00, "BananaLeaf", 10.00, "Veg", 70.00 ],
       [ formatDate("01-Nov-2025"), "ToBng", 69.00, "Veg", 107.00, "Rice", 360.00, "Lunch", 55.00, "Snacks", 30.00 ]
