--- a/spending-forward-fixed.html
+++ b/spending-forward-fixed.html
@@ -488,7 +488,7 @@ import { getDatabase, ref, set, get, child, push } from "https://www.gstatic.com
 const firebaseConfig = {
   apiKey: "AIzaSyDSNanmji7WVBtQHlPO-J_E5RQu9Qlq4Qw",
   authDomain: "openmurugesan.firebaseapp.com",
-  databaseURL: "https://openmurugesan-default-rtdb.asia-southeast1.firebasedatabase.app",
+  databaseURL: "https://openmurugesan-default-rtdb.asia-southeast1.firebasedatabase.app/",
   projectId: "openmurugesan",
   storageBucket: "openmurugesan.firebasestorage.app",
   messagingSenderId: "307675598593",
