CRLF to CR spending.html

--- a/chatgpt-help.html
+++ b/chatgpt-help.html
@@ -1,6 +1,11 @@
+data base url:
+	https://console.firebase.google.com/project/openmurugesan/database/openmurugesan-default-rtdb/data
+
+https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/index.html
 https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending-forward-fixed.html
 https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending-forward.html
 
+https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending-test-05-nov-2025.html
 
 https://murugesanopenssl.github.io/murugesanopenssl/index.html
 https://murugesanopenssl.github.io/murugesanopenssl/spending.html
@@ -29,3 +34,21 @@ api code:
 		appId: "1:307675598593:web:4af163460ce2c3bc719500",
 		measurementId: "G-0MFK92PQMP"
 		};
+
+F:\cygwin_x86_64\home\NMurugesan\Din_Back\httpd-server\Apache24\htdocs\chatgpt\murugesanopenssl\spending-forward-fixed.html
+https://chatgpt.com
+https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending-forward-fixed.html
+file:///F:/cygwin_x86_64/home/NMurugesan/Din_Back/httpd-server/Apache24/htdocs/chatgpt/murugesanopenssl/spending-forward-fixed.html
+
+
+https://murugesanopenssl.github.io/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending-forward-fixed.html
+this is having duplicate rows Tue 04-Nov-2025 is present at three rows Provide delete button column to delete those rows
+from db do not provide description in multiple paragraphs provide
+Replace:
+	existing code1
+	existing code2
+With:
+	existing code1
+	...
+	existing code2
+format
