--- a/spending.working006.html
+++ b/spending.working006.html
@@ -306,7 +306,7 @@ function toggleTable() {
         <thead>
             <TR>
                 <TH valign='top' align='right'>Category</TH>
-                <TH valign='top' align='right'>Amount per month</TH>
+                <TH valign='top' align='right'>Amount</TH>
                 <TH valign='top' align='right'>Details</TH>
             </TR>
         </thead>
@@ -314,22 +314,22 @@ function toggleTable() {
             <!-- Example row -->
             <TR>
                 <TD valign='top' align='right'>Rent</TD>
-                <TD valign='top' align='right'>12000.00 &#8377;</TD>
+                <TD valign='top' align='right'>$1200</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
-                <TD valign='top' align='right'>Petrol</TD>
-                <TD valign='top' align='right'>920.00 &#8377;</TD>
+                <TD valign='top' align='right'>Utilities</TD>
+                <TD valign='top' align='right'>$250</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Food</TD>
-                <TD valign='top' align='right'>400.00 &#8377;</TD>
+                <TD valign='top' align='right'>$400</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Entertainment</TD>
-                <TD valign='top' align='right'>150.00 &#8377;</TD>
+                <TD valign='top' align='right'>$150</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
         </tbody>
