--- a/test.html
+++ b/test.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <HTML lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<HEAD>
+    <META CHARSET="UTF-8">
+    <META name="viewport" content="width=device-width, initial-scale=1.0">
 	<META charset="UTF-8">
 	<LINK href="MyMenu002.css" rel="stylesheet">
 	<META name="viewport" content="width=device-width, initial-scale=1.0">
 	<TITLE>Human-AI Financial Solutions</TITLE>
-   <!--
-   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-   -->
-<style>
+	<!--
+	<LINK rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	-->
+	<style type='text/css'>
 .rectangle {
             position: relative;
             width: 50px;
@@ -306,7 +306,7 @@ function toggleTable() {
         <thead>
             <TR>
                 <TH valign='top' align='right'>Category</TH>
-                <TH valign='top' align='right'>Amount per month</TH>
+                <TH valign='top' align='right'>Amount</TH>
                 <TH valign='top' align='right'>Details</TH>
             </TR>
         </thead>
@@ -314,22 +314,22 @@ function toggleTable() {
             <!-- Example row -->
             <TR>
                 <TD valign='top' align='right'>Rent</TD>
-                <TD valign='top' align='right'>12000.00 &#8377;</TD>
+                <TD valign='top' align='right'>$1200</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
-                <TD valign='top' align='right'>Petrol</TD>
-                <TD valign='top' align='right'>920.00 &#8377;</TD>
+                <TD valign='top' align='right'>Utilities</TD>
+                <TD valign='top' align='right'>$250</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Food</TD>
-                <TD valign='top' align='right'>400.00 &#8377;</TD>
+                <TD valign='top' align='right'>$400</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Entertainment</TD>
-                <TD valign='top' align='right'>150.00 &#8377;</TD>
+                <TD valign='top' align='right'>$150</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
         </tbody>
