Updated rent, petrol and saved values

--- a/spending.html
+++ b/spending.html
@@ -306,7 +306,7 @@ function toggleTable() {
         <thead>
             <TR>
                 <TH valign='top' align='right'>Category</TH>
-                <TH valign='top' align='right'>Amount</TH>
+                <TH valign='top' align='right'>Amount per month</TH>
                 <TH valign='top' align='right'>Details</TH>
             </TR>
         </thead>
@@ -319,17 +319,17 @@ function toggleTable() {
             </TR>
             <TR>
                 <TD valign='top' align='right'>Petrol</TD>
-                <TD valign='top' align='right'>250.00 &#8377;</TD>
+                <TD valign='top' align='right'>920.00 &#8377;</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Food</TD>
-                <TD valign='top' align='right'>55.00 &#8377;</TD>
+                <TD valign='top' align='right'>400.00 &#8377;</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
             <TR>
                 <TD valign='top' align='right'>Saved Amount</TD>
-                <TD valign='top' align='right'>171.00 &#8377;</TD>
+                <TD valign='top' align='right'>150.00 &#8377;</TD>
                 <TD valign='top' align='right'><a href="#">View Details</a></TD>
             </TR>
         </tbody>
