--- a/spending.html
+++ b/spending.html
@@ -221,7 +221,7 @@
 
     <!-- Menu Bar -->
     <nav>
-		<a href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/index.html' class="link-style" onclick="toggleTable()" id='Homehref' style='color:blue'>Home</a>
+		<a href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/index.html' class="link-style" id='Homehref' style='color:blue'>Home</a>
 		<script type='text/javascript'>
 		function showHomeTable()
 		{
