--- a/spending.html
+++ b/spending.html
@@ -353,7 +353,7 @@ function toggleTable() {
 <NOSCRIPT>
 <TABLE border='1'>
 <TR> <TD valign='top' align='right' bgcolor=cyan>
-<A href='index.html'>HOME</A> </TD>
+<a href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/index.html' class="link-style" id='Homehref' style='color:blue'>Home</a>
 <TD valign='top' align='right'>
 	<A>MoneyHelp01</A>
 </TD>
