Display home table onload index.html

--- a/index.html
+++ b/index.html
@@ -1457,8 +1457,8 @@ window.onload = function() {
             // Hide the PreventWastage table
             const preventWastageTable = document.getElementById("PreventWastage");
 			const HomeTable = document.getElementById("HomeTable");
-            preventWastageTable.style.display = "table"; // Hide it
-            HomeTable.style.display = "none"; // Hide it
+            preventWastageTable.style.display = "none"; // Hide it
+            HomeTable.style.display = "table"; // Hide it
 
             // Show the CategoryAmountDetailsTab table
             const categoryAmountDetailsTab = document.getElementById("CategoryAmountDetailsTab");
