Make Home page link instead of using PreventWastage linke at Home link

--- a/spending.html
+++ b/spending.html
@@ -222,17 +222,13 @@
     <!-- Menu Bar -->
     <nav>
 		<SCRIPT type='text/javascript'>
-            if( window.location.href.includes('spending.html') )
+            if( window.location.href.includes('index.html') )
             {
-                    document.write("<a class='link-style' onclick='toggleTable()' id='PreventWastagehref' style='color:blue'>PreventWastage</a>");
+                    document.write("<a class='link-style' onclick='toggleTable()' id='PreventWastagehref' style='color:blue'>Home</a>");
             }
             else
             {
-                    document.write("<a class='link-style' href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending.html' id='PreventWastagehref' style='color:blue'>PreventWastage</a>");
-            }
-            if( window.location.href.includes('index.html') )
-            {
-                    document.write("<a class='link-style' href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/index.html' id='Homehref' style='color:blue'>Home</a>");
+                    document.write("<a class='link-style' href='/ExplorerPatcher-Exception-Windows-11-Home-Single-Language/spending.html' id='PreventWastagehref' style='color:blue'>Home</a>");
             }
 		function showHomeTable()
 		{
